--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,43 @@
-# Default ignored files
-/workspace.xml
-#########################
-## Java
-#########################
-.mtj.tmp/
+# Created by .ignore support plugin (hsz.mobi)
+### Java template
+# Compiled class file
 *.class
+
+# Eclipse
+.settings/
+bin/
+tmp/
+.metadata
+.classpath
+.project
+*.tmp
+*.bak
+*.swp
+*~.nib
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
 *.jar
 *.war
-*.ear
 *.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 ## IntelliJ
-########################
+##################
 out/
 .idea/
 .idea_modules/
@@ -20,23 +45,4 @@ out/
 *.gml
 *.ipr
 *.iws
-#######################
-## Eclipse
-#######################
-.settings/
-bin/
-tmp/
-.metdata
-.classpath
-.project
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.loadpath
-.factorypath
-
-/build.gradle
-
 
